--- a/css/index.css
+++ b/css/index.css
@@ -65,12 +65,27 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
-
+.headercontent {
+  display: flex;
+  margin-bottom: 2%;
+}
+header nav a {
+	font-size: 14px;
+	text-decoration: none;
+	padding-right: 45px;
+    color: black;
+}
+.logo {
+    margin-right: 5%;
+    margin-left: 9%
+}
 .container {
     width: 800px;
     margin: 0 auto;
 }
-
+.jumbo {
+    margin-left: 9%;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -99,19 +114,48 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    justify-content: center;
 }
 
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+.box:nth-child(1) {
+  background-color: teal;
+}
+.box:nth-child(2) {
+  background-color: gold;
+}
+.box:nth-child(3) {
+  background-color: cadetblue;
+}
+.box:nth-child(4) {
+  background-color: coral;
+}
+.box:nth-child(5) {
+  background-color: crimson;
+}
+.box:nth-child(6) {
+  background-color: forestgreen;
+}
+.box:nth-child(7) {
+  background-color: darkorchid;
+}
+.box:nth-child(8) {
+  background-color: hotpink;
+}
+.box:nth-child(9) {
+  background-color: indigo;
+}
+.box:nth-child(10) {
+  background-color: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
